[update] add website basic structure

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.scss">
-    <title>TESTTTTT</title>
+    <title>Cabbage chair By Nendo</title>
 </head>
 <body>
-    <header><h1>HELLO</h1></header>
+    <!--Entête contenant le menu-->
+    <header class="header">
+        <nav class="nav"></nav>
+    </header>
+
+    <!--Contenu de la page-->
+    <main class="main">
+
+    </main>
+
+    <!--Pied de page-->
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
