[update] add homepage content

--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.scss">
     <title>Cabbage chair By Nendo</title>
 </head>
 <body>
     <!--Entête contenant le menu-->
     <header class="header">
-        <nav class="nav"></nav>
+        <nav class="nav">
+         
+       </nav>
     </header>
+
 
     <!--Contenu de la page-->
     <main class="main">
+      <section class="homepage">
+        <h1 class="homepage__title"> The Cabbage Chair</h1>
+        
+        <h2 class="homepage__creator"> - By Nendo - </h2>
+
+          <a class="homepage__link" href="#"> Découvrir</a>
+      </section>
 
     </main>
 
