[update] add creator section, updated menu links

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.scss">
     <title>Cabbage chair By Nendo</title>
 </head>
@@ -19,7 +20,7 @@
           <span class="bars"></span>
         </div>
         <div id="menuItems" class="menu__items">
-          <a class="items__link"> Le créateur </a>
+          <a class="items__link" href="#Creator"> Le créateur </a>
           <a class="items__link"> The Cabbage Chair </a>
           <a class="items__link"> Sa production </a>
           <a class="items__link"> Utilisation </a>
@@ -36,7 +37,34 @@
         
         <h2 class="homepage__creator"> - By Nendo - </h2>
 
-        <a class="homepage__link" href="#"> Découvrir</a>
+        <a class="homepage__link" href="#Creator"> Découvrir</a>
+      </section>
+
+      <section class="creator" id="Creator">
+        <h3 class="creator__title">Les créateurs de ce projet</h3>
+          <article class="creator__summary">
+            <div class= "summary__image">
+              <img  src="./assets/img/oki_sato.jpg" alt="Oki Sato Designer">
+            </div>
+            
+              <span class="summary__name">Oki Sato</span>
+              <p class="summary__bio">
+                Designer et architecte japonais, diplômé d'un Master en architecture de la Waseda University de Tokyo en 2002, il a fondé le <span class="bio__important">studio Nendo</span> la même année. C'est lui qui est à <span class="bio__important">l'origine du projet de la Cabbage Chair</span>
+                en collaboration avec le célèbre créateur Issey Miyake. Sa motivation dans le travail à toujours été de mettre en exergue les émotions sensibles, les idées les plus simples faisant pour lui un des meilleurs
+                points de départ. 
+              </p>
+          </article>
+          <article class="creator__summary">
+            <div class= "summary__image">
+              <img  src="./assets/img/issey-miyake.jpg" alt="Issey Miyake Designer">
+            </div>
+              <span class="summary__name">Issey Miyake</span>
+              <p class="summary__bio">
+                Célèbre styliste japonais, il a étudié le design à la Tama Art University de Tokyo. Connu pour son usage du <span class="bio__important">"papier plissé"</span> dans ses créations vestimentaires, il a obtenu au fil des années
+                une notoriété sans précédent. Reconnu comme un styliste ayant un attrait pour le minimalisme, il a tenté selon ses propres mots de faire une mode qui soit "ni japonaise, ni occidentale". 
+                 En collaboration avec le studio Nendo, <span class="bio__important">il a fourni les rouleaux de papier plissé inutilisés de ses usines pour cette création</span>.
+              </p>
+          </article>
       </section>
 
     </main>
