[update] add span in creator section

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <span class="bars"></span>
         </div>
         <div id="menuItems" class="menu__items">
-          <a class="items__link" href="#Creator"> Le créateur </a>
+          <a class="items__link" href="#Creator"> Les créateurs </a>
           <a class="items__link"> The Cabbage Chair </a>
           <a class="items__link"> Sa production </a>
           <a class="items__link"> Utilisation </a>
@@ -61,7 +61,7 @@
               <span class="summary__name">Issey Miyake</span>
               <p class="summary__bio">
                 Célèbre styliste japonais, il a étudié le design à la Tama Art University de Tokyo. Connu pour son usage du <span class="bio__important">"papier plissé"</span> dans ses créations vestimentaires, il a obtenu au fil des années
-                une notoriété sans précédent. Reconnu comme un styliste ayant un attrait pour le minimalisme, il a tenté selon ses propres mots de faire une mode qui soit "ni japonaise, ni occidentale". 
+                une notoriété sans précédent. Reconnu comme un styliste ayant un attrait pour le<span class="bio__important"> minimalisme</span>, il a tenté selon ses propres mots de faire une mode qui soit "ni japonaise, ni occidentale". 
                  En collaboration avec le studio Nendo, <span class="bio__important">il a fourni les rouleaux de papier plissé inutilisés de ses usines pour cette création</span>.
               </p>
           </article>
