[update] add chair section for description

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,25 @@
           </article>
       </section>
 
+      <section class="chair">
+        <h4 class="chair__title"> The Cabbage Chair</h4>
+        <div class="chair__images">
+          <img class="images__element" src="./assets/img/cabbage_chair_mixed.png" alt="Chaise noir et blanche">
+          <img class="images__element" src="./assets/img/blue_cabbage_chair.jpg" alt="Chaise Blue">
+          <img class="images__element" src="./assets/img/cabbage_chair_3_colors.jpg" alt="Trois couleurs">
+          <img class="images__element"src="./assets/img/cabbage_chair_black.png" alt="Chaise noire">
+        </div>
+        <aside class="chair__data">
+          <span>Création: 2007</span>
+          <span>Matériaux: Papier plissé</span>
+          <span>Dimensions: 91.4 x 50.8 cm (roulée) / 73.7 x 83.3 cm (dépliée)</span>
+        </aside>
+
+        <p class="chair__summary">
+
+        </p>
+      </section>
+
     </main>
 
     <!--Pied de page-->
