[update] create content section chair

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="menuItems" class="menu__items">
           <a class="items__link" href="#Creator"> Les créateurs </a>
-          <a class="items__link"> The Cabbage Chair </a>
+          <a class="items__link" href="#Chair"> The Cabbage Chair </a>
           <a class="items__link"> Sa production </a>
           <a class="items__link"> Utilisation </a>
         </div> 
@@ -67,7 +67,7 @@
           </article>
       </section>
 
-      <section class="chair">
+      <section id="Chair" class="chair">
         <h4 class="chair__title"> The Cabbage Chair</h4>
         <div class="chair__images">
           <img class="images__element" src="./assets/img/cabbage_chair_mixed.png" alt="Chaise noir et blanche">
@@ -75,15 +75,23 @@
           <img class="images__element" src="./assets/img/cabbage_chair_3_colors.jpg" alt="Trois couleurs">
           <img class="images__element"src="./assets/img/cabbage_chair_black.png" alt="Chaise noire">
         </div>
-        <aside class="chair__data">
-          <span>Création: 2007</span>
-          <span>Matériaux: Papier plissé</span>
-          <span>Dimensions: 91.4 x 50.8 cm (roulée) / 73.7 x 83.3 cm (dépliée)</span>
-        </aside>
 
         <p class="chair__summary">
-
+          Issey Miyake a demandé de fabriquer des meubles à partir du papier plissé qui est produit en quantités massives pendant le processus de fabrication de tissu plissé, et généralement abandonné comme un sous-produit indésirable.
+          La solution à son défi a transformé un rouleau de papier plissé en une petite chaise qui apparaît naturellement quand vous pelez ses couches extérieures, une couche à la fois. <br>
+          Les résines ajoutées pendant le processus de production du papier original ajoute de la force et la capacité de mémoriser des formes, et les plis eux-mêmes donnent à la chaise élasticité pour un effet global qui semble presque rugueux, 
+          mais donne à l’utilisateur une expérience de sièges confortables. Comme le processus de production est simple, la chaise est expédiée sous forme de rouleau compact pour que l’utilisateur la créer chez lui. <br>
+          La chaise n’a pas de structure interne. 
+          Elle est assemblée sans clous ni vis. Cette conception primitive et avant-gardiste répond aux coûts de fabrication et de distribution et aux préoccupations environnementales.
         </p>
+
+        <aside class="chair__data">
+          <span class="data__element"><i class="data__important">Création:</i> 2007</span>
+          <span class="data__element"><i class="data__important">Matériaux:</i> Papier plissé</span>
+          <span class="data__element"><i class="data__important">Dimensions:</i> 91.4 x 50.8 cm (roulée) / 73.7 x 83.3 cm (dépliée)</span>
+        </aside>
+
+        
       </section>
 
     </main>
