[update] create production section html code

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <div id="menuItems" class="menu__items">
           <a class="items__link" href="#Creator"> Les créateurs </a>
           <a class="items__link" href="#Chair"> The Cabbage Chair </a>
-          <a class="items__link"> Sa production </a>
+          <a class="items__link" href="#Production"> Sa production </a>
           <a class="items__link"> Utilisation </a>
         </div> 
       </nav>
@@ -78,11 +78,7 @@
 
         <p class="chair__summary">
           Issey Miyake a demandé de fabriquer des meubles à partir du papier plissé qui est produit en quantités massives pendant le processus de fabrication de tissu plissé, et généralement abandonné comme un sous-produit indésirable.
-          La solution à son défi a transformé un rouleau de papier plissé en une petite chaise qui apparaît naturellement quand vous pelez ses couches extérieures, une couche à la fois. <br>
-          Les résines ajoutées pendant le processus de production du papier original ajoute de la force et la capacité de mémoriser des formes, et les plis eux-mêmes donnent à la chaise élasticité pour un effet global qui semble presque rugueux, 
-          mais donne à l’utilisateur une expérience de sièges confortables. Comme le processus de production est simple, la chaise est expédiée sous forme de rouleau compact pour que l’utilisateur la créer chez lui. <br>
-          La chaise n’a pas de structure interne. 
-          Elle est assemblée sans clous ni vis. Cette conception primitive et avant-gardiste répond aux coûts de fabrication et de distribution et aux préoccupations environnementales.
+          La solution à son défi a transformé un rouleau de papier plissé en une petite chaise qui apparaît naturellement quand vous pelez ses couches extérieures, une couche à la fois. Le but était de répondre aux enjeux environnementaux et économiques avec ce projet.
         </p>
 
         <aside class="chair__data">
@@ -92,6 +88,19 @@
         </aside>
 
         
+      </section>
+
+      <!--Section qui explique comment c'est produit-->
+      <section id="Production" class="production">
+        <h5 class="production__title">La Production</h5>
+        <div>
+        <img class="production__image" src="./assets/img/production.jpg" alt="Production de la chaise">
+        <p class="production__text">
+            La Cabbage chair est formée à partir du papier plissé issue des usines d'Issey Miyake. Les résines ajoutées pendant le processus de production du papier original ajoute de la force et la capacité de mémoriser des formes à la chaise. Les plis eux-mêmes donnent à la chaise élasticité pour un effet global qui semble presque rugueux, 
+          mais donne à l’utilisateur une expérience de sièges confortables. Ici vous ne verrez ni clou ni vis dans le processus de production car il n'y en a pas. Le papier plissé est simplement mit en rouleau de sorte à ce que 
+          l'utilisateur n'ait plus qu'à le couper couche par couche pour créer la chaise. Ici l'utilisateur devient acteur en "créant" lui-même sa chaise.
+        </p>
+      </div>
       </section>
 
     </main>
