[update] add link in the footer and correct details

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
         <div id="menuItems" class="menu__items">
           <a class="items__link" href="#Creator"> Les créateurs </a>
           <a class="items__link" href="#Chair"> The Cabbage Chair </a>
-          <a class="items__link" href="#Production"> Sa production </a>
-          <a class="items__link"> Utilisation </a>
+          <a class="items__link" href="#Production"> La production </a>
+          <a class="items__link" href="#Use"> Son utilisation </a>
         </div> 
       </nav>
 
@@ -103,11 +103,24 @@
       </div>
       </section>
 
+      <!--Section qui permet de montrer comment marche le produit-->
+      <section id="Use" class="use">
+        <h6 class="use__title">Son utilisation</h6>
+        <div>
+          <img class="use__image" src="./assets/img/cabbage_chair_install.jpg" alt="Utilisation de la chaise">
+          <p class="use__text">Comme mentionné plus haut, l'utilisateur est l'acteur de la "création" de la chaise. Ici, si vous ne faites rien alors vous n'aurez qu'un simple rouleau de papier plissé qui restera
+            impossible à utiliser. Si elle s'appelle la Cabbage Chair (ou la Chaise Choux en français), c'est car son utilisation à le même principe qu'effeuiller un choux. <br>
+             En effet, l'utilisateur va couper les couches de la chaise une à une comme vous pouvez le voir sur l'illustration afin de créer la chaise finale. Il s'agit en effet d'une tâche
+             demandant un peu de patience, mais la récompense de pouvoir enfin s'asseoir sur cette chaise n'en est alors que plus importante.
+          </p>
+        </div>
+      </section>
     </main>
 
     <!--Pied de page-->
     <footer class="footer">
-
+      <p class="footer__text"> © Chloé Prévôté - 2020</p>
+      <a class="footer__studiolink" href="http://www.nendo.jp/en/works/cabbage-chair-2/" target="__blank"> Aller sur le site de Nendo</a>
     </footer>
  <script src="assets/js/app.js"></script>
 </body>
