--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
 
       <section class="creator" id="Creator">
         <h3 class="creator__title">Les créateurs de ce projet</h3>
+  <div>
           <article class="creator__summary">
             <div class= "summary__image">
               <img  src="./assets/img/oki_sato.jpg" alt="Oki Sato Designer">
@@ -65,10 +66,13 @@
                  En collaboration avec le studio Nendo, <span class="bio__important">il a fourni les rouleaux de papier plissé inutilisés de ses usines pour cette création</span>.
               </p>
           </article>
+    </div>
       </section>
 
       <section id="Chair" class="chair">
         <h4 class="chair__title"> The Cabbage Chair</h4>
+
+        <div>
         <div class="chair__images">
           <img class="images__element" src="./assets/img/cabbage_chair_mixed.png" alt="Chaise noir et blanche">
           <img class="images__element" src="./assets/img/blue_cabbage_chair.jpg" alt="Chaise Blue">
@@ -76,6 +80,7 @@
           <img class="images__element"src="./assets/img/cabbage_chair_black.png" alt="Chaise noire">
         </div>
 
+        <div id="text">
         <p class="chair__summary">
           Issey Miyake a demandé de fabriquer des meubles à partir du papier plissé qui est produit en quantités massives pendant le processus de fabrication de tissu plissé, et généralement abandonné comme un sous-produit indésirable.
           La solution à son défi a transformé un rouleau de papier plissé en une petite chaise qui apparaît naturellement quand vous pelez ses couches extérieures, une couche à la fois. Le but était de répondre aux enjeux environnementaux et économiques avec ce projet.
@@ -86,7 +91,8 @@
           <span class="data__element"><i class="data__important">Matériaux:</i> Papier plissé</span>
           <span class="data__element"><i class="data__important">Dimensions:</i> 91.4 x 50.8 cm (roulée) / 73.7 x 83.3 cm (dépliée)</span>
         </aside>
-
+      </div>
+      </div>
         
       </section>
 
