[update] add notes in the file

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,8 @@
         <a class="homepage__link" href="#Creator"> Découvrir</a>
       </section>
 
+    
+<!--Section dédiée aux biographies sur les créateurs-->
       <section class="creator" id="Creator">
         <h3 class="creator__title">Les créateurs de ce projet</h3>
   <div>
@@ -68,7 +70,7 @@
           </article>
     </div>
       </section>
-
+<!--Section dédiée à l'explication de l'origine de la chaise-->
       <section id="Chair" class="chair">
         <h4 class="chair__title"> The Cabbage Chair</h4>
 
